syntax = "proto3";
option java_multiple_files= true;
package com.oalkan.grpc;

service PatientService{
  rpc getPatient(PatientRequest) returns (PatientResponse);
}

message PatientRequest{
  Patient patient=1;
}

message PatientResponse{
  string code=1;
  Response response=2;
}

message Response {
  bool statusCode = 1;
  string message= 2;
}

message Patient{
  string firstname=1;
  string lastname=2;
  string dateofbirth=3;
  string gender=4;
  string address=5;
  string phone=6;
  string email=7;
  string emergencycontact=8;
}

message Hospital{
  string name=1;
  string address=2;
  string phone=3;
  int64  capacity=4;
  List Patient =5;
}

message List{
  string name=1;
}